[ISSUE-1] Add API to create a new product Type: feature Description: - Improved Dockerfile configuration - Added application-local.yml